--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "luk",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "file-system": "^2.2.2",
+    "fs": "^0.0.1-security"
   }
 }
